# PSDinator-config-software

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/chipboard_configuration_software/: main.py
src/chipboard_configuration_software/c_decoder/: Makefile  __init__.py  c_extension_loader.py  event_decoder.c  event_decoder.h
src/chipboard_configuration_software/command_generator/: __init__.py  generate_command_string.py
src/chipboard_configuration_software/command_generator/board_components/: cfd.py  dac.py  delay.py  mux.py  psd.py
src/chipboard_configuration_software/command_generator/commands/: __init__.py  cfd_commands.py  delay_commands.py  global_commands.py  mux_commands.py  psd_commands.py  tdc_commands.py
src/chipboard_configuration_software/configurations/: direct_dac_control.json  enable_test.json  enable_test_2.json  psdinator_config.json  single_board_config.json  single_board_config_backup.json  single_board_config_backup_2.json  single_board_config_temp.json  test_3.84.json
src/chipboard_configuration_software/gui/: PSDinator_ui_main_window.py  README.md  adc_plot_ui_controller.py  ads_test.py  app.py  autosave_config.json  cfd_ui_controller.py  chipboard_config_tab.py  chipboard_configurator.py  chipboard_ui_controller.py  configuration_helper.py  debug_console_controller.py  dock_main_window.py  psd_ui_controller.py  utilities.py
src/chipboard_configuration_software/gui/background_threads/: __init__.py  decoded_pipe_reader.py  decoded_pipe_reader_types.py
src/chipboard_configuration_software/gui/ui_files/: MainConfigWindow.py  MainConfigWindow.ui  adc_plot_ui_widget.py  adc_plot_ui_widget.ui  ads_example.py  cfd_settings.py  cfd_settings.ui  cfd_ui_widget.py  cfd_ui_widget.ui  chipboard_settings.py  chipboard_settings.ui  chipboard_ui_widget.py  log_window.py  (+10 more)
src/chipboard_configuration_software/uart_link/: ASCII_instruction_set.md  autosave_config.json  cli_configuration_utility.py  direct_octal_dac_control.py  event_handler.py  middleware.py  utils.py
src/command_generator/: generate_command_string.py
src/command_generator/board_components/: __init__.py  cfd.py  dac.py  delay.py  mux.py  psd.py  tdc.py  utils.py
src/configurations/: single_board_config.json  single_board_config_backup.json
src/gui/: app.py  configuration_helper.py
src/gui/ui_files/: MainConfigWindow.ui
src/tests/: test_generate_command_string.py  test_psd.py
src/tests/chipboard_testbenches/: cfd_agnd_test.py  scope_interactive_debug.py
src/tests/command_generator_tests/: test_generate_command_string.py
src/tests/test_cfd/: test_cfd.py
src/tests/uart_link_tests/: test_middleware.py
src/uart_link/: ASCII instruction set.md  __init__.py  ascii_constants.py  middleware.py  utils.py
tests/: test_generate_command_string.py  test_mux.py  test_psd.py
tests/chipboard_testbenches/: awg_arb_setup.py  awg_setup.py  awg_tail_pulse_setup.py  cfd_agnd_test.py  octal_dac_test.py  psd_test_mode.py  pulse_and_trigger.py  scope_interactive_debug.py  test.py
tests/command_generator_tests/: test_generate_command_string.py
tests/command_generator_tests/psd_command_tests/: test_psd_commands.py
tests/test_cfd/: test_cfd.py
uart_link/: ASCII instruction set.md
(+4 files in other folders)
