[project]
name = "Psdinator-configuration-software"
dynamic = [ "version" ]
description = "A GUI utitlity for configuring the WashU CFD-PSD ASIC-based chipboards."
authors = [
    {name = "Prince John", email = "johnp@wustl.edu"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
"numpy==2.2.5",
  "pyserial==3.5",
  "PySide6==6.9.0",
  "PySide6-QtAds==4.4.0",
  "PySide6_Addons==6.9.0",
  "PySide6_Essentials==6.9.0",
  "shiboken6==6.9.0"
]

[tool.poetry]
packages = [{ include = "chipboard_configuration_software", from = "src" }]
version = "0.2.0"


[project.gui-scripts]
psdinator = 'chipboard_configuration_software.main:main'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[project.scripts]
psdinator = 'chipboard_configuration_software.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"